Setup working diffuse model